--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -34,6 +34,10 @@
     font-size: 12px;
     color: rgba(113, 79, 79, 0.74);
 
+    &_text {
+      width: 100%;
+    }
+
     &_version {
       width: 100%;
       margin: 10px 0;
@@ -49,8 +53,6 @@
 
       &-text {
         font-size: 14px;
-
-
       }
     }
 
