--- a/src/app/pages/diary/components/weight/components/weight-history/weight-history.component.html
+++ b/src/app/pages/diary/components/weight/components/weight-history/weight-history.component.html
@@ -1,38 +1,47 @@
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="date" >
-      <th mat-header-cell *matHeaderCellDef  mat-sort-header> Дата </th>
-      <td mat-cell *matCellDef="let element"> {{element.date | date:'yyyy.MM.dd'}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef  mat-sort-header width="80px"> Вес </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} kg</td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="diff">
-      <th mat-header-cell *matHeaderCellDef  mat-sort-header width="80px"> Разница </th>
-      <td mat-cell *matCellDef="let element" [style.color]="element.diff > 0 ? 'red' : 'green' "> <span  *ngIf="element.diff">{{ element.diff }} kg</span></td>
-    </ng-container>
-
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="icon">
-      <th mat-header-cell *matHeaderCellDef width="20px"></th>
-      <td mat-cell *matCellDef="let row">
-        <fa-icon icon="arrow-right"></fa-icon>
-      </td>
-    </ng-container>
-
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">Нету данных</td>
-    </tr>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="clickByRowAction(row)"></tr>
-  </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+<div class="app-weight-history">
+    <div class="app-weight-history-new-item">
+        <button mat-fab color="primary" (click)="newWeightDialogAction()">
+            <fa-icon icon="plus"></fa-icon>
+        </button>
+    </div>
+  <div *ngFor="let year of dataList" >
+      <div class="app-weight-history_date">
+          <span>{{ year.year }}</span>
+      </div>
+      <div *ngFor="let month of year.months">
+          <div class="app-weight-history_date">
+              <span>{{ month.month }}</span>
+          </div>
+          <div class="app-weight-history_item" *ngFor="let item of month.items">
+              <div class="app-weight-history_item-row" (click)="toggleSubMenu(item)">
+                  <div class="app-weight-history_item-date" >
+                      <span>{{ item.date | date:'dd' }}</span>
+                  </div>
+                  <div class="app-weight-history_item-weight">
+                      {{ item.weight }} кг
+                  </div>
+                  <div class="app-weight-history_item-diff">
+                      <span class="app-weight-history_item-diff-icon" *ngIf="item.diff">
+                          <fa-icon icon="chart-bar"></fa-icon>
+                      </span>
+                      <span class="app-weight-history_item-diff-value">
+                          {{ item.diff }}
+                      </span>
+                  </div>
+                  <div class="app-weight-history_item-menu">
+                      <button class="app-weight-history_item-menu-button">
+                          <fa-icon icon="ellipsis-v"></fa-icon>
+                      </button>
+                  </div>
+              </div>
+              <div class="app-weight-history_item-comment" *ngIf="item.comment">
+                  <span>{{ item.comment }}</span>
+              </div>
+              <div *ngIf="item.showSubMenu" class="app-weight-history_item-actions">
+                  <button class="app-weight-history_item-actions-edit" mat-raised-button (click)="editWeightDialogAction(item)">Изменить</button>
+                  <button class="app-weight-history_item-actions-remove" mat-raised-button  (click)="removeWeightAction(item)">Удалить</button>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
