--- a/src/app/pages/diary/components/weight/components/weight-statistic/weight-statistic.component.scss
+++ b/src/app/pages/diary/components/weight/components/weight-statistic/weight-statistic.component.scss
@@ -1,5 +1,56 @@
 .weight-statistic {
-  &-ite
+  width: 100%;
+  height: 100%;
+  padding: 0 0 10px 0;
+  position: relative;
+
+  &-new-item {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 99;
+
+    button {
+      background: #B71C1C;
+    }
+  }
+
+  &-header {
+    padding: 10px 0;
+    background: #FFFFFF;
+    border-radius: 8px;
+    margin: 32px 16px 16px 16px;
+
+    &_row {
+      display: flex;
+      margin: 10px 0;
+
+      &-title {
+        display: flex;
+        margin: 10px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        color: rgba(113, 79, 79, 0.74);
+        font-size: 14px;
+      }
+    }
+    &_item {
+      width: 33%;
+      text-align: center;
+
+      &-name {
+        color: rgba(113, 79, 79, 0.74);
+        font-size: 12px;
+      }
+
+      &-value {
+        color: rgba(113, 79, 79, 0.74);
+        font-weight: 600;
+        font-size: 18px;
+      }
+    }
+  }
   &_link {
     font-size: 12px;
     padding: 0 10px;
@@ -38,17 +89,6 @@
     &_form-field {
       width: 100%;
       padding: 0 10px
-    }
-  }
-
-  &-header {
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    h3 {
-      margin: 0;
     }
   }
 }
