--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -6,65 +6,62 @@
   <form>
     <div class="app-settings-content">
       <div class="app-settings-content_form-field">
-        <mat-form-field appearance="outline" class="app-settings-content_form-field">
-          <mat-label>Имя</mat-label>
-          <input matInput type="text" placeholder="Ваше имя" [formControl]="nameControl">
-        </mat-form-field>
+        <app-input-text
+                class="app-settings-content_form-field"
+                label="Имя"
+                placeholder="Ваше имя"
+                [control]="nameControl"
+        ></app-input-text>
       </div>
       <div class="app-settings-content_form-field">
-        <mat-form-field appearance="outline" class="app-settings-content_form-field">
-          <mat-label>Рост</mat-label>
-          <input matInput type="number" placeholder="Ваш рост в см" [formControl]="growthControl">
-        </mat-form-field>
+        <app-input-number
+            class="app-settings-content_form-field"
+            label="Рост, cм"
+            placeholder="Ваш рост в см"
+            [control]="growthControl"
+        ></app-input-number>
       </div>
       <div class="app-settings-content_form-field">
-        <mat-form-field appearance="outline" class="app-settings-content_form-field">
-          <mat-label>Планируемый вес</mat-label>
-          <input matInput type="number" placeholder="Планируемый вес" [formControl]="plannedWeightControl">
-        </mat-form-field>
+        <app-input-number
+                class="app-settings-content_form-field"
+                label="Планируемый вес, кг"
+                placeholder="Вес который вы бы хотели иметь, кг"
+                [control]="plannedWeightControl"
+        ></app-input-number>
       </div>
       <div class="app-settings-content_form-field">
-        <mat-form-field appearance="outline" class="app-settings-content_form-field">
-          <mat-label>Пол</mat-label>
-          <mat-select [formControl]="sexControl">
-            <mat-option value="man">Мужской</mat-option>
-            <mat-option value="woman">Женский</mat-option>
-          </mat-select>
-        </mat-form-field>
+        <app-input-select
+          label="Пол"
+          [control]="sexControl"
+          [selectList]="sexList"
+        ></app-input-select>
       </div>
       <div class="app-settings-content_form-field">
-        <mat-form-field appearance="outline" class="app-settings-content_form-field">
-          <mat-label>Дата рождения</mat-label>
-          <input matInput [matDatepicker]="datepickerBirthday" [formControl]="birthdayControl">
-          <mat-datepicker-toggle matSuffix [for]="datepickerBirthday"></mat-datepicker-toggle>
-          <mat-datepicker #datepickerBirthday></mat-datepicker>
-        </mat-form-field>
+        <app-input-date
+                class="app-settings-content_form-field"
+                label="Дата рождения"
+                [control]="birthdayControl"
+        ></app-input-date>
       </div>
       <div class="app-settings-content_form-field">
-        <mat-form-field appearance="outline" class="app-settings-content_form-field">
-          <mat-label>Пересаженный орган</mat-label>
-          <mat-select [formControl]="transplantOrganControl">
-            <mat-option value="Kidney">Почка</mat-option>
-            <mat-option value="Liver">Печень</mat-option>
-            <mat-option value="Lungs">Легкие</mat-option>
-            <mat-option value="Heart">Сердце</mat-option>
-            <mat-option value="Pancreas">Поджелудочная железа</mat-option>
-          </mat-select>
-        </mat-form-field>
+        <app-input-select
+                label="Пересаженный орган"
+                [control]="transplantOrganControl"
+                [selectList]="transplantOrgan"
+        ></app-input-select>
       </div>
       <div class="app-settings-content_form-field">
-        <mat-form-field appearance="outline" class="app-settings-content_form-field">
-          <mat-label>Дата трансплантации</mat-label>
-          <input matInput [matDatepicker]="datepickerTransplantDate" [formControl]="transplantDateControl">
-          <mat-datepicker-toggle matSuffix [for]="datepickerTransplantDate"></mat-datepicker-toggle>
-          <mat-datepicker #datepickerTransplantDate></mat-datepicker>
-        </mat-form-field>
+        <app-input-date
+                class="app-settings-content_form-field"
+                label="Дата трансплантации"
+                [control]="transplantDateControl"
+        ></app-input-date>
       </div>
     </div>
 
-    <ion-footer class="app-settings-footer">
+    <div class="app-settings-footer">
       <button mat-raised-button color="primary" (click)="saveSettingsAction()">Сохранить</button>
-    </ion-footer>
+    </div>
   </form>
 </ion-content>
 
