--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -15,6 +15,9 @@
     button {
       width: 100%;
       margin: 20px;
+      background: linear-gradient(0deg, rgba(183, 28, 28, 0.8), rgba(183, 28, 28, 0.8)), linear-gradient(144.03deg, #FFFFFF 50%, rgba(255, 255, 255, 0) 82.87%);
+      box-shadow: 0px 1px 4px rgba(183, 28, 28, 0.5);
+      border-radius: 8px;
     }
   }
   &-content {
@@ -22,11 +25,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px 0;
+    padding: 20px;
 
     &_form-field {
       width: 100%;
-      padding: 0 10px
     }
   }
 
