--- a/src/app/shared/components/input-time/input-time.component.scss
+++ b/src/app/shared/components/input-time/input-time.component.scss
@@ -1,3 +1,63 @@
 mat-form-field {
   width: 100%;
 }
+mat-label {
+  color: rgba(113, 79, 79, 0.74);
+}
+
+// mat-icon-stepper selected color change
+::ng-deep .mat-step-header .mat-step-icon-selected, .mat-step-header .mat-step-icon-state-done, .mat-step-header .mat-step-icon-state-edit {
+  background-color: rgba(183, 28, 28, 0.5)!important;
+}
+
+//input outline color
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+  color: rgba(113, 79, 79, 0.3)!important;
+  // opacity: 1!important;
+}
+
+//mat-input focused color
+::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+  color: rgba(183, 28, 28, 0.5)!important;
+}
+
+// mat-input error outline color
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick{
+  color: rgba(183, 28, 28, 0.5)!important;
+  opacity: 0.8!important;
+}
+
+// mat-input carent color
+::ng-deep .mat-input-element {
+  caret-color: rgba(183, 28, 28, 0.5)!important;
+}
+
+// mat-input error carent color
+::ng-deep .mat-form-field-invalid .mat-input-element, .mat-warn .mat-input-element {
+  caret-color: rgba(183, 28, 28, 0.5)!important;
+}
+
+// mat-label normal state style
+::ng-deep .mat-form-field-label {
+  color: rgba(183, 28, 28, 0.5)!important;
+  // color: $mainColor!important;
+}
+
+// mat-label focused style
+::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
+  color: rgba(183, 28, 28, 0.5)!important;
+}
+
+// mat-label error style
+::ng-deep .mat-form-field.mat-form-field-invalid .mat-form-field-label {
+  color:rgba(183, 28, 28, 0.5)!important;
+}
+
+/* Border */
+.mat-form-field-appearance-outline .mat-form-field-outline {
+  color: rgba(183, 28, 28, 0.5);
+}
+/* Font color */
+input.mat-input-element {
+  color: rgba(113, 79, 79, 1);
+}
