--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,38 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+ion-tab-bar {
+  border-radius: 8px 8px 0px 0px;
+  background: linear-gradient(
+                  0deg
+          , #FFF3E0, #FFF3E0), #FFFFFF;
+  box-shadow: 0px -1px 4px rgba(183, 28, 28, 0.25);
+}
+
+
+ion-tab-button {
+  background: linear-gradient(
+                  0deg
+          , #FFF3E0, #FFF3E0), #FFFFFF;
+
+  ion-icon {
+    color: rgba(113, 79, 79, 0.3);
+    font-size: 18px;
+  }
+
+  ion-label {
+    color: rgba(113, 79, 79, 0.3);
+  }
+}
+
+ion-tab-button.tab-selected {
+  ion-icon {
+    color:  rgba(183, 28, 28, 0.5);
+    font-size: 18px;
+  }
+
+  ion-label {
+    color:  rgba(183, 28, 28, 0.5);
+  }
+}
